--- a/VisaRoomApp/VisaRoomApp.WebSite/Views/Shared/_Layout.cshtml
+++ b/VisaRoomApp/VisaRoomApp.WebSite/Views/Shared/_Layout.cshtml
@@ -16,11 +16,12 @@
         @Scripts.Render("~/Content/dist/js/sb-admin-2.js")
     </head>
     <body>
-        <div id="wrapper">
+        <div id="wrapper" >
 
         <!-- Navigation -->
-        <nav class="navbar navbar-default navbar-static-top"  role="navigation" style="background-image:url(/Images/NavBarBackGroud.png); margin-bottom: 0">
+        <nav class="navbar navbar-default navbar-static-top"  role="navigation" style="background-color:#39B7CD; margin-bottom: 0;">
             <div class="navbar-header" >
+                <a class="navbar-brand"  style="width:225px; background-image:url(/Images/Logo.PNG)" href="#"></a>
                 <button type="button"  class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
@@ -29,7 +30,7 @@
                 </button>
                 
             </div>
-            <a class="navbar-brand"  style="width:225px; background-image:url(/Images/Logo.PNG)" href="#"></a>
+            
             <!-- /.navbar-header -->
 
             <ul class="nav navbar-top-links navbar-right">
@@ -81,7 +82,7 @@
             </ul>
             <!-- /.navbar-top-links -->
 
-            <div class="navbar-default sidebar"  role="navigation">
+            <div class="navbar-default sidebar"  role="navigation" style="opacity:0.9">
                 <div class="sidebar-nav navbar-collapse">
                     <ul class="nav" id="side-menu">
                         
@@ -106,25 +107,25 @@
                                
                         </li>
                         <li>
-                            <a class="text-center"><i class="fa fa-book fa-fw"></i>  <strong>About Me </strong></a>
+                            <a  style="font-size:20px"><i class="fa fa-book fa-fw"></i>  About Me </a>
                         </li>
                         <li>
-                            <a class="text-center"><i class="fa fa-building fa-fw"></i> <strong>City</strong></a>
+                            <a  style="font-size:20px"><i class="fa fa-building fa-fw"></i> City</a>
                           
                         </li>
                         <li>
-                            <a class="text-center"><i class="fa fa-book fa-fw"></i> <strong>Visa Hold</strong></a>
+                            <a  style="font-size:20px"><i class="fa fa-book fa-fw"></i> Visa Hold</a>
                         </li>
                         <li>
-                            <a class="text-center"><i class="fa fa-graduation-cap fa-fw"></i> <strong>Bachelor Degreed</strong></a>
+                            <a  style="font-size:20px"><i class="fa fa-graduation-cap fa-fw"></i> Bachelor of System Engineree</a>
                         </li>
                         <li>
-                            <a class="text-center"><i class="fa fa-language fa-fw"></i> <strong>English, Spanish</strong></a>
+                            <a  style="font-size:20px"><i class="fa fa-language fa-fw"></i> English, Spanish</a>
                             
                           
                         </li>
                         <li>
-                            <a class="text-center"><i class="fa fa-home fa-fw"></i> <strong>Spain</strong></span></a>
+                            <a  style="font-size:20px"><i class="fa fa-home fa-fw"></i> Spain</span></a>
                             
                            
                         </li>
@@ -136,7 +137,7 @@
             <!-- /.navbar-static-side -->
         </nav>
 
-            <div id="body">
+            <div id="body" style="opacity:0.8">
                 <div id="page-wrapper">
                     <div class="container-fluid">
                         <div class="row">
