--- a/VisaRoom/VisaRoom.Web/Views/Account/Login.cshtml
+++ b/VisaRoom/VisaRoom.Web/Views/Account/Login.cshtml
@@ -2,59 +2,70 @@
 
 @{
     ViewBag.Title = "Log in";
+    Layout = "~/Views/Shared/_LayoutLogin.cshtml";
 }
 <script>
 $(".validation-summary-errors").removeClass("validation-summary-errors");
 $(".input-validation-error").removeClass("input-validation-error").parent().addClass("has-error");
 </script>
-<hgroup class="title">
+@*<hgroup class="title">
     <h1>@ViewBag.Title.</h1>
-</hgroup>
+</hgroup>*@
 
 <section id="loginForm">
-<h2>Use a local account to log in.</h2>
-@using (Html.BeginForm(new { ReturnUrl = ViewBag.ReturnUrl })) {
+
+@using (Html.BeginForm(new { ReturnUrl = ViewBag.ReturnUrl }))
+{
      @Html.AntiForgeryToken()
                
-                if (ViewData.ModelState.Any(x => x.Value.Errors.Any()))
-                {
-                    <div class="alert alert-danger alert-dismissible" role="alert">
-                       
+    if (ViewData.ModelState.Any(x => x.Value.Errors.Any()))
+    {
+                    <div class="alert alert-danger alert-dismissible" role="alert">                       
                         <h4>Datos Faltates</h4>
                         @Html.ValidationSummary()
                     </div>
-                }
+    }
 
     <fieldset>
-        <legend>Log in Form</legend>
-        <ol>
-            <li>
-                @Html.LabelFor(m => m.UserName)
-                @Html.TextBoxFor(m => m.UserName)
-               
-            </li>
-            <li>
-                @Html.LabelFor(m => m.Password)
-                @Html.PasswordFor(m => m.Password)
-                @Html.ValidationMessageFor(m => m.Password)
-            </li>
-            <li>
-                @Html.CheckBoxFor(m => m.RememberMe)
-                @Html.LabelFor(m => m.RememberMe, new { @class = "checkbox" })
-            </li>
-        </ol>
-        <input type="submit" value="Log in" />
+        <div class="row">
+            <div class="col-md-4 col-md-offset-4">
+                <div class="login-panel panel panel-default">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">Log in Form</h3>
+                    </div>
+                    <div class="panel-body">
+                        <form role="form">                    
+                            <div class="form-group">
+                                    @Html.LabelFor(m => m.UserName)
+                                    @Html.TextBoxFor(m => m.UserName, new { @class = "form-control" })
+                                    @Html.ValidationMessageFor(m => m.UserName, null, new { @class = "label label-danger" })               
+                            </div>
+                            <div class="form-group">
+                                    @Html.LabelFor(m => m.Password)
+                                    @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
+                                    @Html.ValidationMessageFor(m => m.Password, null, new { @class = "label label-danger" })   
+                             </div>
+                             <div class="checkbox">
+                                 <label>
+                                    @Html.CheckBoxFor(m => m.RememberMe)
+                                    @Html.LabelFor(m => m.RememberMe)
+                                </label>
+                              </div>
+                            <input type="submit" class="btn btn-lg btn-success btn-block" value="Log in" />
+                            <p>
+                                @Html.ActionLink("Register", "Register") if you don't have an account.
+                            </p>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
     </fieldset>
-    <p>
-        @Html.ActionLink("Register", "Register") if you don't have an account.
-    </p>
+    
 }
 </section>
 
-<section class="social" id="socialLoginForm">
-    <h2>Use another service to log in.</h2>
-    @Html.Action("ExternalLoginsList", new { ReturnUrl = ViewBag.ReturnUrl })
-</section>
+
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
