--- a/VisaRoom/VisaRoom.Web/Views/Shared/_LayoutLogin.cshtml
+++ b/VisaRoom/VisaRoom.Web/Views/Shared/_LayoutLogin.cshtml
@@ -16,7 +16,7 @@
 
     </head>
     <body id="bodyPhoto" >
-        
+        @Html.Partial("_ProcessingModal")
         <!-- Navigation -->
         <nav class="navbar navbar-default navbar-static-top"  role="navigation" style="background-color:#39B7CD; margin-bottom: 0;">
             <div class="navbar-header" >
@@ -25,7 +25,7 @@
                 
             </div>
             
-            <!-- /.navbar-header -->
+          
 
             <ul class="nav navbar-top-links navbar-right">
               <li class="dropdown">
@@ -34,12 +34,12 @@
                     </a>
                   
                 </li>
-                <!-- /.dropdown -->
+              
             </ul>
            
         </nav>       
         <div style="background-color:rgba(255,255,255,0.5); min-height: 568px;" >
-            @RenderSection("featured", required: false)
+            @RenderSection("featured", required: false) 
             <section >
                 @RenderBody()
             </section> 
