--- a/VisaRoom/VisaRoom.Web/Views/Account/Login.cshtml
+++ b/VisaRoom/VisaRoom.Web/Views/Account/Login.cshtml
@@ -1,5 +1,5 @@
 ﻿@model VisaRoom.Web.Models.LoginModel
-
+@using VisaRoom.Web.App_GlobalResources;
 @{
     ViewBag.Title = "Log in";
     Layout = "~/Views/Shared/_LayoutLogin.cshtml";
@@ -27,7 +27,7 @@ $(".input-validation-error").removeClass("input-validation-error").parent().addC
             <div class="col-md-4 col-md-offset-4">
                 <div class="login-panel panel panel-default" >
                     <div class="panel-heading">
-                        <h3 class="panel-title">@Resources.Resource.lbl_Log_in_Form</h3>
+                        <h3 class="panel-title">@Resource.lbl_Log_in_Form</h3>
                     </div>
                     <div class="panel-body">
                         <form role="form">                    
@@ -47,9 +47,9 @@ $(".input-validation-error").removeClass("input-validation-error").parent().addC
                                     @Html.LabelFor(m => m.RememberMe)
                                 </label>
                               </div>
-                            <input type="submit" class="btn btn-lg btn-success btn-block" value="@Resources.Resource.lbl_LogIn" />
+                            <input type="submit" class="btn btn-lg btn-success btn-block" value="@Resource.lbl_LogIn" />
                             <p>
-                                @Html.ActionLink(@Resources.Resource.lbl_Register, "Register") @Resources.Resource.lbl_IfNotAccoun
+                                @Html.ActionLink(@Resource.lbl_Register, "RegisterApplicant") @Resource.lbl_IfNotAccoun
                             </p>
                         </form>
                     </div>
