--- a/VisaRoom/packages/twitter.bootstrap.mvc4.1.1.100/Content/Views/Shared/_BootstrapLayout.basic.cshtml
+++ b/VisaRoom/packages/twitter.bootstrap.mvc4.1.1.100/Content/Views/Shared/_BootstrapLayout.basic.cshtml
@@ -7,11 +7,9 @@
         <meta charset="utf-8">
         <title>@ViewBag.Title</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-       @* <link href="@Styles.Url("~/content/css")" rel="stylesheet"/>
+        <link href="@Styles.Url("~/content/css")" rel="stylesheet"/>
         @RenderSection("head", required: false)
-        @Html.Partial("_html5shiv")*@
-        @Styles.Render("~/content/bootstrapcss")
-        @Scripts.Render("~/bootstrapjs")
+        @Html.Partial("_html5shiv")
         @* favicons and touch icons go here *@
     </head>
     <body>
@@ -31,7 +29,6 @@
             </div>
         </div>        
         <div class="container">
-             @RenderSection("featured", required: false)
             @Html.Partial("_alerts")
             @Html.Partial("_validationSummary")
             @RenderBody()   
@@ -39,25 +36,6 @@
             <footer>
                 <p>&copy; Company @System.DateTime.Now.ToString("yyyy")</p>
             </footer> 
-            <p>&copy; LPA eComms 2014</p>
-      </footer>
-     <!-- /container -->        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.js"></script>
-        <script>window.jQuery || document.write('<script src="~/Content/themes/bootstrap/js/vendor/jquery-1.11.1.js"><\/script>')</script>
-
-    
-
-    
-        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-        <script>
-            (function (b, o, i, l, e, r) {
-                b.GoogleAnalyticsObject = l; b[l] || (b[l] =
-                function () { (b[l].q = b[l].q || []).push(arguments) }); b[l].l = +new Date;
-                e = o.createElement(i); r = o.getElementsByTagName(i)[0];
-                e.src = '//www.google-analytics.com/analytics.js';
-                r.parentNode.insertBefore(e, r)
-            }(window, document, 'script', 'ga'));
-            ga('create', 'UA-XXXXX-X'); ga('send', 'pageview');
-        </script>
         </div>
          @Scripts.Render("~/js")
          @RenderSection("Scripts", required: false)
