--- a/VisaRoom/VisaRoom.Web/Views/Account/Login.cshtml
+++ b/VisaRoom/VisaRoom.Web/Views/Account/Login.cshtml
@@ -9,7 +9,7 @@ $(".validation-summary-errors").removeClass("validation-summary-errors");
 $(".input-validation-error").removeClass("input-validation-error").parent().addClass("has-error");
 </script>
 
-<section id="loginForm">
+
 
 @using (Html.BeginForm(new { ReturnUrl = ViewBag.ReturnUrl }))
 {
@@ -22,10 +22,10 @@ $(".input-validation-error").removeClass("input-validation-error").parent().addC
                     </div>
     }
 
-    <fieldset>
+    
         <div class="row" >
             <div class="col-md-4 col-md-offset-4">
-                <div class="login-panel panel panel-default" >
+                <div class="login-panel panel panel-primary" >
                     <div class="panel-heading">
                         <h3 class="panel-title">@Resource.lbl_Log_in_Form</h3>
                     </div>
@@ -49,17 +49,17 @@ $(".input-validation-error").removeClass("input-validation-error").parent().addC
                               </div>
                             <input type="submit" class="btn btn-lg btn-success btn-block" value="@Resource.lbl_LogIn" />
                             <p>
-                                @Html.ActionLink(@Resource.lbl_Register, "RegisterApplicant") @Resource.lbl_IfNotAccoun
+                                @Html.ActionLink(@Resource.lbl_Register,  "Index", "Home") @Resource.lbl_IfNotAccoun
                             </p>
                         </form>
                     </div>
                 </div>
             </div>
         </div>
-    </fieldset>
+ 
     
 }
-</section>
+
 
 
 
