--- a/VisaRoom/VisaRoom.Web/Views/Shared/_LayoutLogin.cshtml
+++ b/VisaRoom/VisaRoom.Web/Views/Shared/_LayoutLogin.cshtml
@@ -12,30 +12,48 @@
         @Styles.Render("~/content/bootstrapcss")
         @Scripts.Render("~/bootstrapjs")
         @Scripts.Render("~/bundles/modernizr")
+        @Styles.Render("~/publicPagesCss")
+        @Scripts.Render("~/publicPagesJs")
         @RenderSection("styles", required: false)
 
     </head>
     <body id="bodyBackGround" >
         @Html.Partial("_ProcessingModal")
         <!-- Navigation -->
-        <nav class="navbar navbar-default navbar-static-top"  role="navigation" style="background-color:#ffffff; margin-bottom: 0;">
-            <div class="navbar-header" >
-                <a class="navbar-brand"  style="width:100px; background-repeat:no-repeat; height:63px; background-image:url(/Images/Logo.PNG)" href="#"></a>
+        <div class="header" id="header">
+		    <div class="container">
+			    <div class="header-logo">
+				    <a href="" ><img src="../images/logo241x162.png" style="max-height:80px; max-width:100%" alt=""/></a>
+			    </div>
+			    <div class="top-nav" >
+				    <span class="menu"><img src="images/menu-icon.png" alt=""/></span>
+				    <ul class="nav1">
+					    <li>@Html.ActionLink("HOME", "Index", "Home")</li>					   
+					    <li><a href="">BLOG</a></li>
+					    <li>@Html.ActionLink("CONTACT", "Contact", "Home")</li>
+                        <li>@Html.ActionLink("LOGIN", "Login", "Account")</li>
+				    </ul>
+				    <!-- script-for-menu -->
+				     <script>
+				         $("span.menu").click(function () {
+				             $("ul.nav1").slideToggle(300, function () {
+				                 // Animation complete.
+				             });
+				         });
+				    </script>
+				    <!-- /script-for-menu -->
+			    </div>
+			    <div class="social-icons">
+				    <ul>
+					    <li><a href="#"></a></li>
+					    <li><a href="#" class="twit"></a></li>							
+				    </ul>
                 
-               
-            </div>
+			    </div>
            
-            <ul class="nav navbar-top-links navbar-right">
-              <li class="dropdown">
-                    <a href="#">
-                        <i class="fa fa-user fa-fw"></i> Login
-                    </a>
-                  
-                </li>
-              
-            </ul>
-           
-        </nav>       
+			    <div class="clearfix"> </div>
+		    </div>	
+	    </div>   
         <div style="background-color:rgba(255,255,255,0.5); min-height: 568px;" >
             @RenderSection("featured", required: false) 
             <section >
