--- a/VisaRoom/VisaRoom.Web/Views/Shared/_LayoutDashBoard.cshtml
+++ b/VisaRoom/VisaRoom.Web/Views/Shared/_LayoutDashBoard.cshtml
@@ -9,7 +9,7 @@
         <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
         <meta name="viewport" content="width=device-width" />
         @Scripts.Render("~/bundles/jquery")
-        @Styles.Render("~/content/bootstrapcss")
+        @Styles.Render("~/content/bundle")
         @Scripts.Render("~/bootstrapjs")
         @Scripts.Render("~/bundles/modernizr")
         
