--- a/VisaRoom/VisaRoom.Web/Views/Shared/_LayoutHome.cshtml
+++ b/VisaRoom/VisaRoom.Web/Views/Shared/_LayoutHome.cshtml
@@ -3,8 +3,7 @@
 <html>
 <head>
 	<title>VisaRoom</title>
-	<link href="css/style.css" type="text/css" rel="stylesheet" media="all">
-	<link href="css/bootstrap.css" type="text/css" rel="stylesheet" media="all">
+	
 	<!--web-font-->
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,700,300,600,800,400' rel='stylesheet' type='text/css'>
 	<!--//web-font-->
@@ -16,7 +15,7 @@
 	<script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
 	
     @Scripts.Render("~/bundles/jquery")
-    @Styles.Render("~/publicPagesCss")
+    @Styles.Render("~/content/bundle")
     @Scripts.Render("~/publicPagesJs")
     @Scripts.Render("~/bundles/modernizr")
     @RenderSection("styles", required: false)
@@ -39,7 +38,7 @@
 				<a href="" ><img src="images/logo241x162.png" style="max-height:80px; max-width:100%" alt=""/></a>
 			</div>
 			<div class="top-nav">
-				<span class="menu"><img src="images/menu-icon.png" alt=""/></span>
+				<span class="menu"><img src="../images/menu-icon.png" alt=""/></span>
 				<ul class="nav1">
 					<li><a href="" class="active">HOME</a></li>
 					<li><a href="#method" class="scroll">HOW IT WORKS</a></li>
