--- a/VisaRoom/VisaRoom.Web/Views/Shared/_LayoutLogin.cshtml
+++ b/VisaRoom/VisaRoom.Web/Views/Shared/_LayoutLogin.cshtml
@@ -56,6 +56,7 @@
         <div style="background-color:rgba(255,255,255,0.5); min-height: 568px;" >
             @RenderSection("featured", required: false) 
             <section >
+                 @Html.Partial("_alerts")
                 @RenderBody()
             </section> 
             
