--- a/VisaRoom/VisaRoom.Web/Content/bootstrap.css
+++ b/VisaRoom/VisaRoom.Web/Content/bootstrap.css
@@ -5759,7 +5759,8 @@ button.close {
   top: 0;
   right: 0;
   left: 0;
-  background-color: #000;
+  z-index: 1030;
+  background-color: #333333;
 }
 .modal-backdrop.fade {
   filter: alpha(opacity=0);
