--- a/VisaRoom/VisaRoom.Web/Views/Home/Index.cshtml
+++ b/VisaRoom/VisaRoom.Web/Views/Home/Index.cshtml
@@ -107,10 +107,10 @@
                     </div>
                 </div>
                  <div style="text-align:center" class="col-md-4">
-                   @Html.Raw(@Resource.txt_ReadyGetAnswers)
+                 @*  @Html.Raw(@Resource.txt_ReadyGetAnswers)
                    <a  href="#seccionRegister" class="btn btn-info">
                     <h4> @Html.Raw(@Resource.txt_joinUsNow)</h4>
-                   </a>
+                   </a>*@
                 </div>
             
             </div>
@@ -262,7 +262,7 @@
 </div>
 <!--seccionWhy-->
 <!--seccionRegister-->
-<div class="cases" id="seccionRegister">
+@*<div class="cases" id="seccionRegister">
     <div class="container">
         <h2>@Html.Raw(@Resource.txt_RegisterLowerCase)</h2>
         <h3>You can register now and start using this amazing site.</h3>
@@ -281,6 +281,6 @@
 
         <div class="clearfix"></div>
     </div>
-</div>
+</div>*@
 <!--//cases-->
 
