--- a/VisaRoom/VisaRoom.Web/Views/Shared/_LayoutHome.cshtml
+++ b/VisaRoom/VisaRoom.Web/Views/Shared/_LayoutHome.cshtml
@@ -64,10 +64,10 @@
 					<li><a href="" class="active">@Html.Raw(@Resource.txt_homeUpperCase)</a></li>
 					<li><a href="#seccionHowItWorks" class="scroll">@Html.Raw(@Resource.txt_HowItWorks)</a></li>
 					<li><a href="#seccionWhy" class="scroll">@Html.Raw(@Resource.txt_whyVisaRoomUpperCase)</a></li>
-					<li><a href="#seccionRegister" class="scroll">@Html.Raw(@Resource.txt_RegisterUpperCase)</a></li>
+					@*<li><a href="#seccionRegister" class="scroll">@Html.Raw(@Resource.txt_RegisterUpperCase)</a></li>*@
 					<li><a href="http://visaroom.com.au/VisaBlog/">@Html.Raw(@Resource.txt_BlogUpperCase)</a></li>
-					<li>@Html.ActionLink(@Resource.txt_ContactUpperCase, "Contact", "Home")</li>
-                    <li>@Html.ActionLink(@Resource.txt_LoginUpperCase, "Login", "Account")</li>
+					@*<li>@Html.ActionLink(@Resource.txt_ContactUpperCase, "Contact", "Home")</li>*@
+                    @*<li>@Html.ActionLink(@Resource.txt_LoginUpperCase, "Login", "Account")</li>*@
 				</ul>
 				<script>
 				    $("span.menu").click(function () {
@@ -118,10 +118,10 @@
 						<li><a href="" class="active">@Html.Raw(@Resource.txt_homeUpperCase)</a></li>
 					    <li><a href="#seccionHowItWorks" class="scroll">@Html.Raw(@Resource.txt_HowItWorks)</a></li>
 					    <li><a href="#seccionWhy" class="scroll">@Html.Raw(@Resource.txt_whyVisaRoomUpperCase)</a></li>
-					    <li><a href="#seccionRegister" class="scroll">@Html.Raw(@Resource.txt_RegisterUpperCase)</a></li>
+					    @*<li><a href="#seccionRegister" class="scroll">@Html.Raw(@Resource.txt_RegisterUpperCase)</a></li>*@
 					    <li><a href="http://visaroom.com.au/VisaBlog/">@Html.Raw(@Resource.txt_BlogUpperCase)</a></li>
-					    <li>@Html.ActionLink(@Resource.txt_ContactUpperCase, "Contact", "Home")</li>
-                        <li>@Html.ActionLink(@Resource.txt_LoginUpperCase, "Login", "Account")</li>
+					    @*<li>@Html.ActionLink(@Resource.txt_ContactUpperCase, "Contact", "Home")</li>*@
+                        @*<li>@Html.ActionLink(@Resource.txt_LoginUpperCase, "Login", "Account")</li>*@
 					</ul>
 				</div>
 				<div class="col-md-4 footer-grids-info">
