--- a/VisaRoom/VisaRoom.Web/Views/Shared/_LayoutHome.cshtml
+++ b/VisaRoom/VisaRoom.Web/Views/Shared/_LayoutHome.cshtml
@@ -66,6 +66,7 @@
 					<li><a href="#seccionRegister" class="scroll">@Html.Raw(@Resource.txt_RegisterUpperCase)</a></li>
 					<li><a href="http://visaroom.com.au/VisaBlog/">@Html.Raw(@Resource.txt_BlogUpperCase)</a></li>
 					<li>@Html.ActionLink(@Resource.txt_ContactUpperCase, "Contact", "Home")</li>
+                    <li>@Html.ActionLink("DashBoard", "Applicant", "DashBoard")</li>
                     <li>@Html.ActionLink(@Resource.txt_LoginUpperCase, "Login", "Account")</li>
 				</ul>
 				<script>
