--- a/VisaRoom/VisaRoom.Web/Views/Account/Login.cshtml
+++ b/VisaRoom/VisaRoom.Web/Views/Account/Login.cshtml
@@ -25,7 +25,7 @@ $(".input-validation-error").removeClass("input-validation-error").parent().addC
     
         <div class="row" >
             <div class="col-md-4 col-md-offset-4">
-                <div class="login-panel panel panel-primary" >
+                <div class="login-panel panel panel-primary" style="margin-top:5%;" >
                     <div class="panel-heading">
                         <h3 class="panel-title">@Resource.lbl_Log_in_Form</h3>
                     </div>
